<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_bringup</name>
  <version>0.0.0</version>
  <description>Package with launch files and run-time configurations</description>
  <maintainer email="you@example.com">ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>xacro</exec_depend>
  <exec_depend>motoman_description</exec_depend>
  <exec_depend>motoman_hardware</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
