<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="50208855+adv4ncr@users.noreply.github.com">ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
